--- a/atari/Makefile.target
+++ b/atari/Makefile.target
@@ -10,6 +10,7 @@
 # the netsurf environment!
 STRIP := $(wildcard $(GCCSDK_INSTALL_CROSSBIN)/*strip)
 STACK := $(wildcard $(GCCSDK_INSTALL_CROSSBIN)/*stack)
+FT2CF := $(GCCSDK_INSTALL_ENV)/bin/freetype-config
 
 ifeq ($(ATARIARCH),68000)
 PRGSUFFIX := 000.app
@@ -32,7 +33,7 @@ endif
 
 # non-pkgconfig components
 
-FREETYPE_FONT_CFLAGS := $(shell freetype-config --cflags) -DWITH_FREETYPE_FONT_DRIVER
+FREETYPE_FONT_CFLAGS := $(shell $(FT2CF) --cflags) -DWITH_FREETYPE_FONT_DRIVER
 SPIDERMONKEY_CFLAGS := -DWITH_MOZJS -DXP_UNIX -DJS_HAS_FILE_OBJECT=0 -DJSOPTION_JIT=0 -DPOSIX_SOURCE -D_BSD_SOURCE
 
 $(eval $(call feature_enabled,PNG,-DWITH_PNG,-lpng,PNG (libpng)))
