--- a/monkey/Makefile.target
+++ b/monkey/Makefile.target
@@ -68,7 +68,7 @@ endif
 # S_MONKEY are sources purely for the MONKEY build
 S_MONKEY := main.c utils.c filetype.c schedule.c \
             bitmap.c plot.c browser.c download.c thumbnail.c		\
-            401login.c cert.c font.c poll.c dispatch.c
+            401login.c cert.c font.c poll.c dispatch.c fetch.c
 
 S_MONKEY := $(addprefix monkey/,$(S_MONKEY))
 
